# workout_project

./: .gitignore  README.md  alembic.ini  database.db  docker-compose.yaml  pyproject.toml
alembic/: env.py
migrations/: env.py
tests/: conftest.py  test_app.py  test_atleta.py
workout_project/: app.py
workout_project/db/: dependencies.py  engine.py
workout_project/models/: atleta.py  categoria.py  centro_treinamento.py  models.py
workout_project/repositories/: atleta.py  categoria.py  centro_treinamento.py
workout_project/routes/: atleta.py  cateogia.py  centro_treinamento.py
workout_project/schemas/: atleta.py  categoria.py  centro_treinamento.py
